tests/parse-fail/types_byte_literals_range.rs
fn main() {
    b'\xfff';
    //~^ ERROR: unterminated byte constant
}
